syntax = "proto3";

package teonyx.master;
import "google/protobuf/timestamp.proto";
import "proto/contracts/vehiclecontract.proto";
import "google/protobuf/empty.proto";
import "proto/contracts/operatorcontracts.proto";

service OperatorService{
   rpc CreateOperator(RequestOperator) returns(ResponseCreateSuccess)
   rpc UpdateOperator(RequestOperator) returns(ResponseSuccess)
   rpc DeleteOperator(RequestDelete)returns(ResponseSuccess)
   rpc GetOperatorById(RequestKey)returns(ResponseOperator)
   rpc GetOperatorsByVehicleId(RequestKey)returns(ResponseOperator)
   rpc CreateOperatorContact(RequestOperatorContact) returns(ResponseCreateSuccess)
   rpc UpdateOperatorContact(RequestOperatorContact) returns(ResponseSuccess)
   rpc DeleteOperatorContact(RequestDelete) returns(ResponseSuccess)
   rpc GetAllContactsByOperator(RequestKey) returns(ResponseOperatorContacts)
   rpc CreateOperatorLocation(RequestOperatorLocation)returns(ResponseCreateSuccess)
   rpc UpdateOperatorLocation(RequestOperatorLocation)returns(ResponseSuccess)
   rpc DeleteOperatorLocation(RequestDelete)returns(ResponseSuccess)
   rpc GetOperatorLocationByOperator(RequestKey) returns(ResponseOperatorContacts)
}